--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-HOST="https://inventory.vercel.app"
+HOST="https://prisma-inventory.vercel.app"
 #HOST="http://localhost:3000"
 SMTP_USERNAME="mahabub.sujon78@gmail.com"
 SMTP_PASSWOED="huqu opyz ptcp uayy"
 JWT_SECRET="123-XYZ-ABC"
-JWT_ISSUER="https://inventory.vercel.app"
+JWT_ISSUER="https://prisma-inventory.vercel.app"
 #JWT_ISSUER="Localhost"
 JWT_EXPIRATION_TIME="7d"
 DATABASE_URL="mongodb+srv://mahabub:mahabub108@cluster0.mawdniu.mongodb.net/Inventory"
